#639: Added Wishlist Type object and queries